src/App.css
:root {
  --primaryOrange: #fcb244;
  --primaryGreen: #c9c8a4;
  --primaryBlack: #141814;
}

html body {
  font-family: 'Montserrat', sans-serif;
  color: var(--primaryBlack);
  font-weight: 400;
  width: 100%;
  height: 100%;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: 'Rubik Mono One', sans-serif;
  letter-spacing: -0.2rem;
}

.test {
  border: 1px solid palegoldenrod;
}

/* NAVBAR */

.navbar-div {
  color: var(--primaryBlack);
  font-size: 1.25rem;
  outline-style: none;
  letter-spacing: -0.1rem;
}

.nav-item-container {
  border-right: 0.5rem solid var(--primaryGreen);
}

.nav-hamburger {
  color: inherit !important;
  border: none;
  text-decoration: none;
}

.nav-item {
  outline: none !important;
  text-decoration: none;
  padding-right: 2rem;
  color: inherit !important;
}

.about-nav {
  font-size: 2rem;
  border-left: 0.5rem solid transparent;
  border-right: 0.5rem solid var(--primaryGreen);
}
.about-nav-item {
  padding-right: 0 !important;
  padding-left: 0;
}

.nav-item:hover {
  text-decoration: none;
  color: var(--primaryBlack);
}

.nav-dropdown {
  border: none;
  border-radius: 0;
  background: var(--primaryOrange);
}

.download-icon {
  font-size: 0.75rem;
}

.green-hover:hover {
  background-color: var(--primaryGreen);
  transition: all 0.75s ease-in-out;
}

/* HOME */

.home-content-card {
  border: none;
  background: transparent;
}

.home-title {
  font-family: 'Rubik Mono One', sans-serif;
  width: fit-content;
  line-height: 5.25rem;
  color: var(--primaryBlack);
  font-size: 6rem;
  margin: 0 0 1rem 0;
}

.home-title-desc {
  font-family: 'Montserrat', sans-serif !important;
  font-weight: 400;
  padding-left: 3rem;
  letter-spacing: -0.1rem;
}

.home-card-body {
  background-color: transparent;
  font-size: 1.25rem !important;
}

.home-image-div {
  color: var(--primaryBlack);
  background-color: var(--primaryOrange);
}

.home-image {
  background-color: var(--primaryOrange);

  max-width: 22rem;
  border-radius: 0;
}

.home-image:hover {
  filter: opacity(75%) blur(2px);
  transition: 1s ease-in-out;
}

.card-content-list {
  list-style-type: none;
}

.home-sub-title {
  font-weight: 400;
  font-family: 'Montserrat', sans-serif !important;
  letter-spacing: -0.1rem;
}

.about-nav {
  width: fit-content;
}
a {
  text-decoration: none;
}

/* FOOTER + ORANGE*/

.orange-stripe {
  background: var(--primaryOrange);
  background: linear-gradient(
    180deg,
    rgba(252, 178, 68, 1) 0%,
    rgba(252, 178, 68, 1) 75%,
    rgba(201, 200, 164, 1) 100%
  );
  width: 25%;
  height: 100%;
  position: fixed;
  padding-top: 3.5rem;
  border: none !important;
}

.orange-stripe-list {
  color: var(--primaryBlack) !important;
  text-align: center;
  border-radius: 0;
}

.home-card-footer {
  position: relative;
  background: none;
  border: none;
  display: flex;
  justify-content: flex-end;
  margin-top: 3rem;
  padding: 0;
}

.icon-list {
  position: absolute;
  left: 0;
}

.footer-icon-list {
  border: none;
  background: none;
}

.footer-social-icon {
  color: var(--primaryBlack);
  font-size: 2rem !important;
  border-bottom: 5px solid transparent;
  width: 2.25rem;
}

.footer-social-icon:hover {
  border-right: none;
  border-bottom: 5px solid var(--primaryGreen) !important;
  transition: all 0.5s ease-in-out;
}

.footer-social-icon:active {
  border-color: var(--primaryOrange);
}

/* WORK */

.card-line {
  width: 35%;
  border-bottom: 0.5rem solid var(--primaryGreen);
}

.work-sub-title {
  font-size: 1.25rem;
  font-weight: 400;
  font-family: 'Montserrat', sans-serif !important;
  letter-spacing: -0.1rem;
}

.work-container {
  position: relative;
  padding-bottom: 5rem;
  box-shadow: 0 2px 4px #dedbd3;
}

.work-title {
  line-height: 3rem;
  color: var(--primaryBlack) !important;
  font-size: 3rem !important;
  max-width: 35rem;
}

.work-content {
  line-height: 1.75rem;
  font-size: 1.25rem;
  letter-spacing: -0.1rem;
  font-weight: 400;
  font-family: 'Montserrat', sans-serif !important;
  text-align: justify;
}

.work-image {
  max-width: 40rem;
  border-radius: 0;
}

.work-button {
  font-family: 'Montserrat', sans-serif !important;
  text-transform: capitalize;
  font-weight: 400;
  font-size: 1.25rem !important;
  outline: none !important;
  width: fit-content;
  padding: 0;
  text-align: left;
  color: var(--primaryBlack);
  text-decoration: none;
  background-color: transparent;
  border-radius: 0;
  border: none;
  border-bottom: 3px solid transparent;
  position: relative;
  display: inline-block;
  cursor: pointer;
}

.work-button:hover {
  background-color: transparent;
  color: var(--primaryBlack);
  border-bottom: 3px solid var(--primaryGreen) !important;
}

/* CASE STUDY */
.case-study-image-main {
  border-radius: 0 !important;
}

.case-study-image {
  max-width: 30rem;

  max-height: 50rem;
  border-radius: 0;
}

.study-title-desc {
  font-weight: 400;
  font-family: 'Montserrat', sans-serif !important;
  letter-spacing: -0.1rem;
}

/* RESUME */

.resume-container {
  width: 100%;
}

.resume-title {
  font-family: 'Rubik Mono One', sans-serif;
  line-height: 3.75rem;
  color: var(--primaryBlack);
  font-size: 4rem;
  margin: 0;
  text-transform: capitalize;
}

.resume-sub-title {
  font-size: 1.5rem;
  font-family: 'Montserrat', sans-serif !important;
  font-weight: 400;
  padding-left: 3rem;
  letter-spacing: -0.1rem;
}

.resume-info-title {
  font-size: 2rem;
  letter-spacing: -0.1rem;
}

.resume-info {
  font-size: 1rem;
  font-family: 'Montserrat', sans-serif !important;
  letter-spacing: -0.04rem;
  font-weight: 400;
}

.columns {
  columns: 2;
}

.resume-list {
  font-size: 1rem;
  font-family: 'Montserrat', sans-serif !important;
  letter-spacing: -0.04rem;
  font-weight: 400;
}
.resume-list li {
}

.resume-list li::before {
  content: '\2014\2009\2009\2009';
  margin-left: 3rem;
}

.resume-list-sub {
  font-size: 1.25rem;
}
/*MEDIA Q*/
@media only screen and (max-width: 768px) {
  .home-title {
    font-size: 3.25rem !important;
    line-height: 3rem !important;
  }
  .home-title-desc {
    font-size: 1.25rem;
  }
  .nav-link {
    font-size: 1.25rem !important;
  }
  .work-title {
    font-size: 2rem !important;
    line-height: 2rem;
  }
  .work-sub-title {
    font-size: 1rem;
  }
  .work-content {
    font-size: 1rem !important;
  }
}

